Tutorials/Tools/Tutorial/07 Types/type1/src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'<>'", "'<'", "'>'", 
                     "'<='", "'>='", "':='", "'['", "']'", "':'", "'('", 
                     "')'", "';'", "'..'", "','" ]

    symbolicNames = [ "<INVALID>", "LINE_CMT", "BLOCK_CMT_1", "BLOCK_CMT_2", 
                      "BREAK", "CONTINUE", "FOR", "WHILE", "TO", "DOWNTO", 
                      "WITH", "DO", "IF", "THEN", "ELSE", "VAR", "OF", "BEGIN", 
                      "END", "RETURN", "FUNCTION", "PROCEDURE", "ARRAY", 
                      "REAL", "BOOLEAN", "INTEGER", "STRING", "NOT", "AND", 
                      "OR", "DIV", "MOD", "ADD", "SUB", "MUL", "DIV_F", 
                      "EQUAL", "NOTEQUAL", "LESSTHAN", "GREATERTHAN", "LESSEQUAL", 
                      "GREATEREQUAL", "ASSIGN", "LSB", "RSB", "COLON", "LB", 
                      "RB", "SEMI", "DDOT", "COMMA", "INTEGER_LITERAL", 
                      "REAL_LITERAL", "TRUE", "FALSE", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "STRING_LITERAL", "IDENTIFIER", 
                      "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_many_declarations = 1
    RULE_declaration = 2
    RULE_variable_declaration = 3
    RULE_list_declarations = 4
    RULE_v_declaration = 5
    RULE_list_identifiers = 6
    RULE_function_declaration = 7
    RULE_list_parameters = 8
    RULE_not_null_list_parameters = 9
    RULE_parameter_declaration = 10
    RULE_procedure_declaration = 11
    RULE_literal = 12
    RULE_types = 13
    RULE_primitive_type = 14
    RULE_compound_type = 15
    RULE_array_type = 16
    RULE_operand = 17
    RULE_expression = 18
    RULE_expression_1 = 19
    RULE_expression_2 = 20
    RULE_expression_3 = 21
    RULE_expression_4 = 22
    RULE_expression_5 = 23
    RULE_expression_6 = 24
    RULE_arr_element = 25
    RULE_func_call = 26
    RULE_list_expression = 27
    RULE_not_null_list_expression = 28
    RULE_statement = 29
    RULE_assignment_statement = 30
    RULE_list_var_idx_ass = 31
    RULE_if_statement = 32
    RULE_while_statement = 33
    RULE_for_statement = 34
    RULE_break_statement = 35
    RULE_continue_statement = 36
    RULE_return_statement = 37
    RULE_compound_statement = 38
    RULE_list_statements = 39
    RULE_not_null_list_statements = 40
    RULE_with_statement = 41
    RULE_call_statement = 42

    ruleNames =  [ "program", "many_declarations", "declaration", "variable_declaration", 
                   "list_declarations", "v_declaration", "list_identifiers", 
                   "function_declaration", "list_parameters", "not_null_list_parameters", 
                   "parameter_declaration", "procedure_declaration", "literal", 
                   "types", "primitive_type", "compound_type", "array_type", 
                   "operand", "expression", "expression_1", "expression_2", 
                   "expression_3", "expression_4", "expression_5", "expression_6", 
                   "arr_element", "func_call", "list_expression", "not_null_list_expression", 
                   "statement", "assignment_statement", "list_var_idx_ass", 
                   "if_statement", "while_statement", "for_statement", "break_statement", 
                   "continue_statement", "return_statement", "compound_statement", 
                   "list_statements", "not_null_list_statements", "with_statement", 
                   "call_statement" ]

    EOF = Token.EOF
    LINE_CMT=1
    BLOCK_CMT_1=2
    BLOCK_CMT_2=3
    BREAK=4
    CONTINUE=5
    FOR=6
    WHILE=7
    TO=8
    DOWNTO=9
    WITH=10
    DO=11
    IF=12
    THEN=13
    ELSE=14
    VAR=15
    OF=16
    BEGIN=17
    END=18
    RETURN=19
    FUNCTION=20
    PROCEDURE=21
    ARRAY=22
    REAL=23
    BOOLEAN=24
    INTEGER=25
    STRING=26
    NOT=27
    AND=28
    OR=29
    DIV=30
    MOD=31
    ADD=32
    SUB=33
    MUL=34
    DIV_F=35
    EQUAL=36
    NOTEQUAL=37
    LESSTHAN=38
    GREATERTHAN=39
    LESSEQUAL=40
    GREATEREQUAL=41
    ASSIGN=42
    LSB=43
    RSB=44
    COLON=45
    LB=46
    RB=47
    SEMI=48
    DDOT=49
    COMMA=50
    INTEGER_LITERAL=51
    REAL_LITERAL=52
    TRUE=53
    FALSE=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    STRING_LITERAL=57
    IDENTIFIER=58
    WS=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_declarations(self):
            return self.getTypedRuleContext(MPParser.Many_declarationsContext,0)


        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.many_declarations(0)
            self.state = 87
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Many_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MPParser.DeclarationContext,0)


        def many_declarations(self):
            return self.getTypedRuleContext(MPParser.Many_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_many_declarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_declarations" ):
                return visitor.visitMany_declarations(self)
            else:
                return visitor.visitChildren(self)



    def many_declarations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Many_declarationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_many_declarations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.declaration()
            self._ctx.stop = self._input.LT(-1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Many_declarationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_many_declarations)
                    self.state = 92
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 93
                    self.declaration() 
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self):
            return self.getTypedRuleContext(MPParser.Variable_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(MPParser.Function_declarationContext,0)


        def procedure_declaration(self):
            return self.getTypedRuleContext(MPParser.Procedure_declarationContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.variable_declaration()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.function_declaration()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.procedure_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def list_declarations(self):
            return self.getTypedRuleContext(MPParser.List_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_variable_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = MPParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MPParser.VAR)
            self.state = 105
            self.list_declarations(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def v_declaration(self):
            return self.getTypedRuleContext(MPParser.V_declarationContext,0)


        def list_declarations(self):
            return self.getTypedRuleContext(MPParser.List_declarationsContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_list_declarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_declarations" ):
                return visitor.visitList_declarations(self)
            else:
                return visitor.visitChildren(self)



    def list_declarations(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.List_declarationsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_list_declarations, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.v_declaration()
            self._ctx.stop = self._input.LT(-1)
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.List_declarationsContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_list_declarations)
                    self.state = 110
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 111
                    self.v_declaration() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class V_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_identifiers(self):
            return self.getTypedRuleContext(MPParser.List_identifiersContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_v_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitV_declaration" ):
                return visitor.visitV_declaration(self)
            else:
                return visitor.visitChildren(self)




    def v_declaration(self):

        localctx = MPParser.V_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_v_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.list_identifiers(0)
            self.state = 118
            self.match(MPParser.COLON)
            self.state = 119
            self.types()
            self.state = 120
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_identifiersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def list_identifiers(self):
            return self.getTypedRuleContext(MPParser.List_identifiersContext,0)


        def COMMA(self):
            return self.getToken(MPParser.COMMA, 0)

        def getRuleIndex(self):
            return MPParser.RULE_list_identifiers

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_identifiers" ):
                return visitor.visitList_identifiers(self)
            else:
                return visitor.visitChildren(self)



    def list_identifiers(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.List_identifiersContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_list_identifiers, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(MPParser.IDENTIFIER)
            self._ctx.stop = self._input.LT(-1)
            self.state = 130
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.List_identifiersContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_list_identifiers)
                    self.state = 125
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 126
                    self.match(MPParser.COMMA)
                    self.state = 127
                    self.match(MPParser.IDENTIFIER) 
                self.state = 132
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Function_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def list_parameters(self):
            return self.getTypedRuleContext(MPParser.List_parametersContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(MPParser.Compound_statementContext,0)


        def variable_declaration(self):
            return self.getTypedRuleContext(MPParser.Variable_declarationContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_function_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declaration" ):
                return visitor.visitFunction_declaration(self)
            else:
                return visitor.visitChildren(self)




    def function_declaration(self):

        localctx = MPParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(MPParser.FUNCTION)
            self.state = 134
            self.match(MPParser.IDENTIFIER)
            self.state = 135
            self.match(MPParser.LB)
            self.state = 136
            self.list_parameters()
            self.state = 137
            self.match(MPParser.RB)
            self.state = 138
            self.match(MPParser.COLON)
            self.state = 139
            self.types()
            self.state = 140
            self.match(MPParser.SEMI)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 141
                self.variable_declaration()


            self.state = 144
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_parametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_null_list_parameters(self):
            return self.getTypedRuleContext(MPParser.Not_null_list_parametersContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_list_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_parameters" ):
                return visitor.visitList_parameters(self)
            else:
                return visitor.visitChildren(self)




    def list_parameters(self):

        localctx = MPParser.List_parametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_parameters)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.not_null_list_parameters(0)
                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Not_null_list_parametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declaration(self):
            return self.getTypedRuleContext(MPParser.Parameter_declarationContext,0)


        def not_null_list_parameters(self):
            return self.getTypedRuleContext(MPParser.Not_null_list_parametersContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_not_null_list_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot_null_list_parameters" ):
                return visitor.visitNot_null_list_parameters(self)
            else:
                return visitor.visitChildren(self)



    def not_null_list_parameters(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Not_null_list_parametersContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_not_null_list_parameters, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.parameter_declaration()
            self._ctx.stop = self._input.LT(-1)
            self.state = 158
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Not_null_list_parametersContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_not_null_list_parameters)
                    self.state = 153
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 154
                    self.match(MPParser.SEMI)
                    self.state = 155
                    self.parameter_declaration() 
                self.state = 160
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Parameter_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_identifiers(self):
